crates/db-read-lockdown/tests/ui/read_statement_no_execute.rs
fn main() {
    fn proves(stmt: &mut db_read::ReadStatement<'_>) {
        let _ = stmt.execute([]);
    }
    let _ = proves;
}
